# aws-sdk-qt

./: .appveyor.yml  .cloc.sh  .cppcheck.sh  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  codegen.cpp  codegen.pro  common.pri  generator.cpp  generator.h  index.html  libqtaws.pro  projects.pro  qtaws.pro  update.sh
codegen/: .appveyor.yml  CMakeLists.txt  README.md  codegen.pro  codegen.qbs  codegen.sh
codegen/qrc/: api-descriptions.qrc  generate-api-descriptions-qrc.sh  templates.qrc  validate-api-descriptions.sh
codegen/src/: generator.cpp  generator.h  main.cpp
codegen/templates/: license.txt
src/: CMakeLists.txt  aws.pri  generator.cpp  generator.h  main.cpp  mainpage.dox  master.qdocconf  s  src.pro
src/AWSMigrationHub/: AWSMigrationHub.pro  associatecreatedartifactrequest.cpp  associatecreatedartifactrequest.h  associatecreatedartifactrequest_p.h  associatecreatedartifactresponse.cpp  associatecreatedartifactresponse.h  associatecreatedartifactresponse_p.h  associatediscoveredresourcerequest.cpp  associatediscoveredresourcerequest.h  associatediscoveredresourcerequest_p.h  associatediscoveredresourceresponse.cpp  associatediscoveredresourceresponse.h  associatediscoveredresourceresponse_p.h  createprogressupdatestreamrequest.cpp  createprogressupdatestreamrequest.h  createprogressupdatestreamrequest_p.h  createprogressupdatestreamresponse.cpp  createprogressupdatestreamresponse.h  createprogressupdatestreamresponse_p.h  deleteprogressupdatestreamrequest.cpp  deleteprogressupdatestreamrequest.h  deleteprogressupdatestreamrequest_p.h  deleteprogressupdatestreamresponse.cpp  deleteprogressupdatestreamresponse.h  deleteprogressupdatestreamresponse_p.h  describeapplicationstaterequest.cpp  describeapplicationstaterequest.h  describeapplicationstaterequest_p.h  describeapplicationstateresponse.cpp  describeapplicationstateresponse.h  describeapplicationstateresponse_p.h  describemigrationtaskrequest.cpp  describemigrationtaskrequest.h  describemigrationtaskrequest_p.h  describemigrationtaskresponse.cpp  describemigrationtaskresponse.h  describemigrationtaskresponse_p.h  disassociatecreatedartifactrequest.cpp  disassociatecreatedartifactrequest.h  disassociatecreatedartifactrequest_p.h  (+72 more)
src/accessanalyzer/: CMakeLists.txt  accessanalyzerclient.cpp  accessanalyzerclient.h  accessanalyzerclient_p.h  accessanalyzerrequest.cpp  accessanalyzerrequest.h  accessanalyzerrequest_p.h  accessanalyzerresponse.cpp  accessanalyzerresponse.h  accessanalyzerresponse_p.h  applyarchiverulerequest.cpp  applyarchiverulerequest.h  applyarchiverulerequest_p.h  applyarchiveruleresponse.cpp  applyarchiveruleresponse.h  applyarchiveruleresponse_p.h  cancelpolicygenerationrequest.cpp  cancelpolicygenerationrequest.h  cancelpolicygenerationrequest_p.h  cancelpolicygenerationresponse.cpp  cancelpolicygenerationresponse.h  cancelpolicygenerationresponse_p.h  createaccesspreviewrequest.cpp  createaccesspreviewrequest.h  createaccesspreviewrequest_p.h  createaccesspreviewresponse.cpp  createaccesspreviewresponse.h  createaccesspreviewresponse_p.h  createanalyzerrequest.cpp  createanalyzerrequest.h  createanalyzerrequest_p.h  createanalyzerresponse.cpp  createanalyzerresponse.h  createanalyzerresponse_p.h  createarchiverulerequest.cpp  createarchiverulerequest.h  createarchiverulerequest_p.h  createarchiveruleresponse.cpp  createarchiveruleresponse.h  createarchiveruleresponse_p.h  (+139 more)
src/account/: CMakeLists.txt  accountclient.cpp  accountclient.h  accountclient_p.h  accountrequest.cpp  accountrequest.h  accountrequest_p.h  accountresponse.cpp  accountresponse.h  accountresponse_p.h  deletealternatecontactrequest.cpp  deletealternatecontactrequest.h  deletealternatecontactrequest_p.h  deletealternatecontactresponse.cpp  deletealternatecontactresponse.h  deletealternatecontactresponse_p.h  getalternatecontactrequest.cpp  getalternatecontactrequest.h  getalternatecontactrequest_p.h  getalternatecontactresponse.cpp  getalternatecontactresponse.h  getalternatecontactresponse_p.h  getcontactinformationrequest.cpp  getcontactinformationrequest.h  getcontactinformationrequest_p.h  getcontactinformationresponse.cpp  getcontactinformationresponse.h  getcontactinformationresponse_p.h  putalternatecontactrequest.cpp  putalternatecontactrequest.h  putalternatecontactrequest_p.h  putalternatecontactresponse.cpp  putalternatecontactresponse.h  putalternatecontactresponse_p.h  putcontactinformationrequest.cpp  putcontactinformationrequest.h  putcontactinformationrequest_p.h  putcontactinformationresponse.cpp  putcontactinformationresponse.h  putcontactinformationresponse_p.h  (+1 more)
src/acm/: CMakeLists.txt  (+107 more)
src/acm-pca/: acm-pca.pro  acmpcaclient.cpp  acmpcaclient_p.h  acmpcarequest.cpp  acmpcarequest.h  acmpcarequest_p.h  acmpcaresponse.cpp  acmpcaresponse.h  acmpcaresponse_p.h  createcertificateauthorityauditreportrequest.cpp  createcertificateauthorityauditreportrequest.h  createcertificateauthorityauditreportresponse.cpp  createcertificateauthorityauditreportresponse.h  createcertificateauthorityrequest.cpp  createcertificateauthorityrequest.h  createcertificateauthorityrequest_p.h  createcertificateauthorityresponse.cpp  createcertificateauthorityresponse.h  deletecertificateauthorityrequest.cpp  deletecertificateauthorityrequest.h  deletecertificateauthorityrequest_p.h  deletecertificateauthorityresponse.cpp  deletecertificateauthorityresponse.h  deletecertificateauthorityresponse_p.h  describecertificateauthorityauditreportrequest.cpp  describecertificateauthorityauditreportrequest.h  describecertificateauthorityauditreportresponse.cpp  describecertificateauthorityauditreportresponse.h  describecertificateauthorityrequest.cpp  describecertificateauthorityrequest.h  describecertificateauthorityrequest_p.h  describecertificateauthorityresponse.cpp  describecertificateauthorityresponse.h  describecertificateauthorityresponse_p.h  getcertificateauthoritycertificaterequest.cpp  getcertificateauthoritycertificaterequest.h  getcertificateauthoritycertificateresponse.cpp  (+54 more)
(+132149 files in other folders)
