add_compile_definitions(QTAWS_LIBRARY)
option(BUILD_SHARED_LIBS "Build shared libraries" ON)
if (BUILD_SHARED_LIBS)
  add_compile_definitions(QTAWS_SHARED)
endif()

include_directories("${CMAKE_CURRENT_LIST_DIR}")
add_subdirectory(core)
add_subdirectory(accessanalyzer)
add_subdirectory(acm)
add_subdirectory(acmpca)
add_subdirectory(alexaforbusiness)
add_subdirectory(prometheusservice)
add_subdirectory(amplify)
add_subdirectory(amplifybackend)
add_subdirectory(apigateway)
add_subdirectory(apigatewaymanagementapi)
add_subdirectory(apigatewayv2)
add_subdirectory(appconfig)
add_subdirectory(appflow)
add_subdirectory(appintegrationsservice)
add_subdirectory(applicationautoscaling)
add_subdirectory(applicationinsights)
add_subdirectory(applicationcostprofiler)
add_subdirectory(appmesh)
add_subdirectory(apprunner)
add_subdirectory(appstream)
add_subdirectory(appsync)
add_subdirectory(athena)
add_subdirectory(auditmanager)
add_subdirectory(autoscaling)
add_subdirectory(autoscalingplans)
add_subdirectory(migrationhub)
add_subdirectory(backup)
add_subdirectory(batch)
add_subdirectory(braket)
add_subdirectory(budgets)
add_subdirectory(costexplorer)
add_subdirectory(chime)
add_subdirectory(cloud9)
add_subdirectory(clouddirectory)
add_subdirectory(cloudformation)
add_subdirectory(cloudfront)
add_subdirectory(cloudhsm)
add_subdirectory(cloudhsmv2)
add_subdirectory(cloudsearch)
add_subdirectory(cloudsearchdomain)
add_subdirectory(cloudtrail)
add_subdirectory(codeartifact)
add_subdirectory(codebuild)
add_subdirectory(codecommit)
add_subdirectory(codedeploy)
add_subdirectory(codegurureviewer)
add_subdirectory(codeguruprofiler)
add_subdirectory(codepipeline)
add_subdirectory(codestar)
add_subdirectory(codestarconnections)
add_subdirectory(codestarnotifications)
add_subdirectory(cognitoidentity)
add_subdirectory(cognitoidentityprovider)
add_subdirectory(cognitosync)
add_subdirectory(comprehend)
add_subdirectory(comprehendmedical)
add_subdirectory(computeoptimizer)
add_subdirectory(configservice)
add_subdirectory(connect)
add_subdirectory(connectcontactlens)
add_subdirectory(connectparticipant)
add_subdirectory(costandusagereportservice)
add_subdirectory(customerprofiles)
add_subdirectory(gluedatabrew)
add_subdirectory(dataexchange)
add_subdirectory(datapipeline)
add_subdirectory(datasync)
add_subdirectory(dax)
add_subdirectory(detective)
add_subdirectory(devicefarm)
add_subdirectory(devopsguru)
add_subdirectory(directconnect)
add_subdirectory(applicationdiscoveryservice)
add_subdirectory(dlm)
add_subdirectory(databasemigrationservice)
add_subdirectory(docdb)
add_subdirectory(directoryservice)
add_subdirectory(dynamodb)
add_subdirectory(ebs)
add_subdirectory(ec2)
add_subdirectory(ec2instanceconnect)
add_subdirectory(ecr)
add_subdirectory(ecrpublic)
add_subdirectory(ecs)
add_subdirectory(eks)
add_subdirectory(elasticinference)
add_subdirectory(elasticache)
add_subdirectory(elasticbeanstalk)
add_subdirectory(efs)
add_subdirectory(elasticloadbalancing)
add_subdirectory(elasticloadbalancingv2)
add_subdirectory(emr)
add_subdirectory(elastictranscoder)
add_subdirectory(ses)
add_subdirectory(emrcontainers)
add_subdirectory(marketplaceentitlementservice)
add_subdirectory(elasticsearchservice)
add_subdirectory(eventbridge)
add_subdirectory(cloudwatchevents)
add_subdirectory(finspace)
add_subdirectory(finspacedata)
add_subdirectory(firehose)
add_subdirectory(fis)
add_subdirectory(fms)
add_subdirectory(forecastservice)
add_subdirectory(forecastqueryservice)
add_subdirectory(frauddetector)
add_subdirectory(fsx)
add_subdirectory(gamelift)
add_subdirectory(glacier)
add_subdirectory(globalaccelerator)
add_subdirectory(glue)
add_subdirectory(greengrass)
add_subdirectory(greengrassv2)
add_subdirectory(groundstation)
add_subdirectory(guardduty)
add_subdirectory(health)
add_subdirectory(healthlake)
add_subdirectory(honeycode)
add_subdirectory(iam)
add_subdirectory(identitystore)
add_subdirectory(imagebuilder)
add_subdirectory(importexport)
add_subdirectory(inspector)
add_subdirectory(iot)
add_subdirectory(iotdataplane)
add_subdirectory(iotjobsdataplane)
add_subdirectory(iot1clickdevicesservice)
add_subdirectory(iot1clickprojects)
add_subdirectory(iotanalytics)
add_subdirectory(iotdeviceadvisor)
add_subdirectory(iotevents)
add_subdirectory(ioteventsdata)
add_subdirectory(iotfleethub)
add_subdirectory(iotsecuretunneling)
add_subdirectory(iotsitewise)
add_subdirectory(iotthingsgraph)
add_subdirectory(iotwireless)
add_subdirectory(ivs)
add_subdirectory(kafka)
add_subdirectory(kendra)
add_subdirectory(kinesis)
add_subdirectory(kinesisvideoarchivedmedia)
add_subdirectory(kinesisvideomedia)
add_subdirectory(kinesisvideosignalingchannels)
add_subdirectory(kinesisanalytics)
add_subdirectory(kinesisanalyticsv2)
add_subdirectory(kinesisvideo)
add_subdirectory(kms)
add_subdirectory(lakeformation)
add_subdirectory(lambda)
add_subdirectory(lexmodelbuildingservice)
add_subdirectory(licensemanager)
add_subdirectory(lightsail)
add_subdirectory(locationservice)
add_subdirectory(cloudwatchlogs)
add_subdirectory(lookoutequipment)
add_subdirectory(lookoutmetrics)
add_subdirectory(lookoutforvision)
add_subdirectory(machinelearning)
add_subdirectory(macie)
add_subdirectory(macie2)
add_subdirectory(managedblockchain)
add_subdirectory(marketplacecatalog)
add_subdirectory(marketplacecommerceanalytics)
add_subdirectory(mediaconnect)
add_subdirectory(mediaconvert)
add_subdirectory(medialive)
add_subdirectory(mediapackage)
add_subdirectory(mediapackagevod)
add_subdirectory(mediastore)
add_subdirectory(mediastoredata)
add_subdirectory(mediatailor)
add_subdirectory(marketplacemetering)
add_subdirectory(mgn)
add_subdirectory(migrationhubconfig)
add_subdirectory(mobile)
add_subdirectory(mobileanalytics)
add_subdirectory(lexmodelsv2)
add_subdirectory(cloudwatch)
add_subdirectory(mq)
add_subdirectory(mturk)
add_subdirectory(mwaa)
add_subdirectory(neptune)
add_subdirectory(networkfirewall)
add_subdirectory(networkmanager)
add_subdirectory(nimblestudio)
add_subdirectory(opsworks)
add_subdirectory(opsworkscm)
add_subdirectory(organizations)
add_subdirectory(outposts)
add_subdirectory(personalize)
add_subdirectory(personalizeevents)
add_subdirectory(personalizeruntime)
add_subdirectory(pi)
add_subdirectory(pinpoint)
add_subdirectory(pinpointemail)
add_subdirectory(polly)
add_subdirectory(pricing)
add_subdirectory(proton)
add_subdirectory(qldb)
add_subdirectory(qldbsession)
add_subdirectory(quicksight)
add_subdirectory(ram)
add_subdirectory(rds)
add_subdirectory(rdsdataservice)
add_subdirectory(redshift)
add_subdirectory(redshiftdataapiservice)
add_subdirectory(rekognition)
add_subdirectory(resourcegroups)
add_subdirectory(resourcegroupstaggingapi)
add_subdirectory(robomaker)
add_subdirectory(route53)
add_subdirectory(route53domains)
add_subdirectory(route53resolver)
add_subdirectory(lexruntimeservice)
add_subdirectory(lexruntimev2)
add_subdirectory(sagemakerruntime)
add_subdirectory(s3)
add_subdirectory(s3control)
add_subdirectory(s3outposts)
add_subdirectory(sagemaker)
add_subdirectory(augmentedairuntime)
add_subdirectory(sagemakeredgemanager)
add_subdirectory(sagemakerfeaturestoreruntime)
add_subdirectory(savingsplans)
add_subdirectory(schemas)
add_subdirectory(simpledb)
add_subdirectory(secretsmanager)
add_subdirectory(securityhub)
add_subdirectory(serverlessapplicationrepository)
add_subdirectory(servicequotas)
add_subdirectory(servicecatalog)
add_subdirectory(appregistry)
add_subdirectory(servicediscovery)
add_subdirectory(sesv2)
add_subdirectory(shield)
add_subdirectory(signer)
add_subdirectory(sms)
add_subdirectory(pinpointsmsvoice)
add_subdirectory(snowball)
add_subdirectory(sns)
add_subdirectory(sqs)
add_subdirectory(ssm)
add_subdirectory(ssmcontacts)
add_subdirectory(ssmincidents)
add_subdirectory(sso)
add_subdirectory(ssoadmin)
add_subdirectory(ssooidc)
add_subdirectory(sfn)
add_subdirectory(storagegateway)
add_subdirectory(dynamodbstreams)
add_subdirectory(sts)
add_subdirectory(support)
add_subdirectory(swf)
add_subdirectory(synthetics)
add_subdirectory(textract)
add_subdirectory(timestreamquery)
add_subdirectory(timestreamwrite)
add_subdirectory(transcribeservice)
add_subdirectory(transcribestreamingservice)
add_subdirectory(transfer)
add_subdirectory(translate)
add_subdirectory(waf)
add_subdirectory(wafregional)
add_subdirectory(wafv2)
add_subdirectory(wellarchitected)
add_subdirectory(workdocs)
add_subdirectory(worklink)
add_subdirectory(workmail)
add_subdirectory(workmailmessageflow)
add_subdirectory(workspaces)
add_subdirectory(xray)
