add_compile_definitions(QTAWSACCESSANALYZER_LIBRARY)

add_library(QtAwsAccessAnalyzer
  qtawsaccessanalyzerglobal.h
  accessanalyzerclient.h
  accessanalyzerclient_p.h
  accessanalyzerrequest.h
  accessanalyzerrequest_p.h
  accessanalyzerresponse.h
  accessanalyzerresponse_p.h
  applyarchiverulerequest.h
  applyarchiverulerequest_p.h
  applyarchiveruleresponse.h
  applyarchiveruleresponse_p.h
  cancelpolicygenerationrequest.h
  cancelpolicygenerationrequest_p.h
  cancelpolicygenerationresponse.h
  cancelpolicygenerationresponse_p.h
  createaccesspreviewrequest.h
  createaccesspreviewrequest_p.h
  createaccesspreviewresponse.h
  createaccesspreviewresponse_p.h
  createanalyzerrequest.h
  createanalyzerrequest_p.h
  createanalyzerresponse.h
  createanalyzerresponse_p.h
  createarchiverulerequest.h
  createarchiverulerequest_p.h
  createarchiveruleresponse.h
  createarchiveruleresponse_p.h
  deleteanalyzerrequest.h
  deleteanalyzerrequest_p.h
  deleteanalyzerresponse.h
  deleteanalyzerresponse_p.h
  deletearchiverulerequest.h
  deletearchiverulerequest_p.h
  deletearchiveruleresponse.h
  deletearchiveruleresponse_p.h
  getaccesspreviewrequest.h
  getaccesspreviewrequest_p.h
  getaccesspreviewresponse.h
  getaccesspreviewresponse_p.h
  getanalyzedresourcerequest.h
  getanalyzedresourcerequest_p.h
  getanalyzedresourceresponse.h
  getanalyzedresourceresponse_p.h
  getanalyzerrequest.h
  getanalyzerrequest_p.h
  getanalyzerresponse.h
  getanalyzerresponse_p.h
  getarchiverulerequest.h
  getarchiverulerequest_p.h
  getarchiveruleresponse.h
  getarchiveruleresponse_p.h
  getfindingrequest.h
  getfindingrequest_p.h
  getfindingresponse.h
  getfindingresponse_p.h
  getgeneratedpolicyrequest.h
  getgeneratedpolicyrequest_p.h
  getgeneratedpolicyresponse.h
  getgeneratedpolicyresponse_p.h
  listaccesspreviewfindingsrequest.h
  listaccesspreviewfindingsrequest_p.h
  listaccesspreviewfindingsresponse.h
  listaccesspreviewfindingsresponse_p.h
  listaccesspreviewsrequest.h
  listaccesspreviewsrequest_p.h
  listaccesspreviewsresponse.h
  listaccesspreviewsresponse_p.h
  listanalyzedresourcesrequest.h
  listanalyzedresourcesrequest_p.h
  listanalyzedresourcesresponse.h
  listanalyzedresourcesresponse_p.h
  listanalyzersrequest.h
  listanalyzersrequest_p.h
  listanalyzersresponse.h
  listanalyzersresponse_p.h
  listarchiverulesrequest.h
  listarchiverulesrequest_p.h
  listarchiverulesresponse.h
  listarchiverulesresponse_p.h
  listfindingsrequest.h
  listfindingsrequest_p.h
  listfindingsresponse.h
  listfindingsresponse_p.h
  listpolicygenerationsrequest.h
  listpolicygenerationsrequest_p.h
  listpolicygenerationsresponse.h
  listpolicygenerationsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startpolicygenerationrequest.h
  startpolicygenerationrequest_p.h
  startpolicygenerationresponse.h
  startpolicygenerationresponse_p.h
  startresourcescanrequest.h
  startresourcescanrequest_p.h
  startresourcescanresponse.h
  startresourcescanresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updatearchiverulerequest.h
  updatearchiverulerequest_p.h
  updatearchiveruleresponse.h
  updatearchiveruleresponse_p.h
  updatefindingsrequest.h
  updatefindingsrequest_p.h
  updatefindingsresponse.h
  updatefindingsresponse_p.h
  validatepolicyrequest.h
  validatepolicyrequest_p.h
  validatepolicyresponse.h
  validatepolicyresponse_p.h
  accessanalyzerclient.cpp
  accessanalyzerrequest.cpp
  accessanalyzerresponse.cpp
  applyarchiverulerequest.cpp
  applyarchiveruleresponse.cpp
  cancelpolicygenerationrequest.cpp
  cancelpolicygenerationresponse.cpp
  createaccesspreviewrequest.cpp
  createaccesspreviewresponse.cpp
  createanalyzerrequest.cpp
  createanalyzerresponse.cpp
  createarchiverulerequest.cpp
  createarchiveruleresponse.cpp
  deleteanalyzerrequest.cpp
  deleteanalyzerresponse.cpp
  deletearchiverulerequest.cpp
  deletearchiveruleresponse.cpp
  getaccesspreviewrequest.cpp
  getaccesspreviewresponse.cpp
  getanalyzedresourcerequest.cpp
  getanalyzedresourceresponse.cpp
  getanalyzerrequest.cpp
  getanalyzerresponse.cpp
  getarchiverulerequest.cpp
  getarchiveruleresponse.cpp
  getfindingrequest.cpp
  getfindingresponse.cpp
  getgeneratedpolicyrequest.cpp
  getgeneratedpolicyresponse.cpp
  listaccesspreviewfindingsrequest.cpp
  listaccesspreviewfindingsresponse.cpp
  listaccesspreviewsrequest.cpp
  listaccesspreviewsresponse.cpp
  listanalyzedresourcesrequest.cpp
  listanalyzedresourcesresponse.cpp
  listanalyzersrequest.cpp
  listanalyzersresponse.cpp
  listarchiverulesrequest.cpp
  listarchiverulesresponse.cpp
  listfindingsrequest.cpp
  listfindingsresponse.cpp
  listpolicygenerationsrequest.cpp
  listpolicygenerationsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startpolicygenerationrequest.cpp
  startpolicygenerationresponse.cpp
  startresourcescanrequest.cpp
  startresourcescanresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updatearchiverulerequest.cpp
  updatearchiveruleresponse.cpp
  updatefindingsrequest.cpp
  updatefindingsresponse.cpp
  validatepolicyrequest.cpp
  validatepolicyresponse.cpp)

target_link_libraries(QtAwsAccessAnalyzer
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
